--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 certifi==2020.6.20
-cycler==0.11.0
-kiwisolver==1.3.2
-numpy==1.21.4
-pandas==1.3.4
-Pillow==8.4.0
-pyparsing==3.0.6
-python-dateutil==2.8.2
-pytz==2021.3
-scipy==1.7.2
-six==1.16.0
+chardet==3.0.4
+click==7.1.2
+Flask==1.1.2
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+joblib==0.15.1
+jsonify==0.5
+MarkupSafe==1.1.1
+numpy==1.19.0
+requests==2.24.0
+scikit-learn==0.23.1
+scipy==1.5.0
+sklearn==0.0
+threadpoolctl==2.1.0
+urllib3==1.25.9
+Werkzeug==1.0.1
 wincertstore==0.2
+gunicorn
